--- a/Cliente/app/build.gradle
+++ b/Cliente/app/build.gradle
@@ -58,5 +58,9 @@ dependencies {
     // https://firebase.google.com/docs/android/setup#available-libraries
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
 
 }
