--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.7.0"
+    "firebase-admin": "^11.7.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
